--- a/ANSv4/Catalogo4/MainWindow.xaml
+++ b/ANSv4/Catalogo4/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Catalogo.MainWindow"
+﻿<Window xmlns:_productos="clr-namespace:Catalogo._productos"  x:Class="Catalogo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
@@ -52,9 +52,11 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="40" />
                                     <RowDefinition  Height="*"/>
+                                    <RowDefinition Height="80" />
                                 </Grid.RowDefinitions>
                                 <Grid x:Name="searchArea" Grid.Row="0" />
                                 <Grid x:Name="productsArea" Grid.Row="1" />
+                                <_productos:DetalleProducto Grid.Row="2" x:Name="productDetalle"/>
                             </Grid>
                         </ad:DocumentContent>
                     </ad:DocumentPane>
