revision 5 agrega frecibo en wf

--- a/ANSv4/Catalogo4/_recibos/frmRecibo.xaml
+++ b/ANSv4/Catalogo4/_recibos/frmRecibo.xaml
@@ -203,7 +203,7 @@
                         </WrapPanel>
                     </Grid>
                 </TabItem>
-                <TabItem Header="A Deducir">
+                <TabItem Header="A Deducir" Height="19.96" VerticalAlignment="Top">
                     <Grid x:Name="grReciboAdeducir"  Margin="20" IsEnabled="False">
                         <Grid.Resources>
                         </Grid.Resources>
