--- a/ANSv4/Catalogo4/_registro/Registration.xaml
+++ b/ANSv4/Catalogo4/_registro/Registration.xaml
@@ -1,11 +1,12 @@
 ﻿<Window x:Class="Catalogo.Registration"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Registration" Height="387" Width="528" Background="Black">
-    <Grid  Height="350" Width="525" Background="#FFF3F2EF">
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="10,5,0,0" Name="textBlockHeading" Text="Registration:" VerticalAlignment="Top" Width="110"  FontSize="17" FontStretch="ExtraCondensed"/>
+        Title="Formulario de Registro de la Aplicación" Height="460" Width="540" Background="Black">
+
+    <Grid  Height="430" Width="525" Background="#FFF3F2EF">
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="10,5,0,0" Name="textBlockHeading" Text="Registración:" VerticalAlignment="Top" Width="110"  FontSize="17" FontStretch="ExtraCondensed"/>
         <!--Button as a Link button using style-->
-        <Button Margin="451,5,12,288" Content="Login" Cursor="Hand" Click="Login_Click">
+        <Button Margin="451,5,12,288" Content="Ingresar" Cursor="Hand" Click="Login_Click">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <TextBlock TextDecorations="Underline"> 
@@ -25,30 +26,37 @@
             </Button.Style>
         </Button>
         <!--end Button as a Link button using style-->
-        <Grid Margin="31,0,29,23" Background="White" Height="264" VerticalAlignment="Bottom">
+        <Grid Margin="31,0,29,23" Background="White" Height="360" VerticalAlignment="Bottom">
             <Grid.RowDefinitions>
-                <RowDefinition Height="252*" />
+                <RowDefinition Height="340" />
                 <!--   <RowDefinition Height="12*" />-->
             </Grid.RowDefinitions>
-            <TextBlock Height="20" HorizontalAlignment="Left" Margin="67,0,0,0" x:Name ="errormessage" VerticalAlignment="Top" Width="247"  OpacityMask="Crimson" Foreground="#FFE5572C" />
-            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,20,0,0" Name="textBlockFirstname" Text="First Name:" VerticalAlignment="Top" Width="110" />
-            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,50,0,0" Name="textBlockLastName" Text="Last Name:" VerticalAlignment="Top" Width="110" />
-            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,80,0,0" Name="textBlockEmailId" Text="EmailId" VerticalAlignment="Top" Width="110" />
-            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,107,0,0" Name="textBlockPassword" Text="Password:" VerticalAlignment="Top" Width="110"  />
-            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,136,0,0" Name="textBlockConfirmPwd" Text="ConfirmPassword:" VerticalAlignment="Top" Width="110" Grid.RowSpan="2" />
-            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,166,0,0" Name="textBlockAddress" Text="Address" VerticalAlignment="Top" Width="110" />
+            <TextBlock Height="20" HorizontalAlignment="Left" Margin="47,0,0,0" x:Name ="errormessage" VerticalAlignment="Top" Width="247"  OpacityMask="Crimson" Foreground="#FFE5572C" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,20,0,0" Name="textBlockFirstname" Text="Nombre:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,50,0,0" Name="textBlockLastName" Text="Apellido:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,80,0,0" Name="textBlockRazonSocial" Text="Razón Social:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,110,0,0" Name="textBlockCuit" Text="C.U.I.T.:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,140,0,0" Name="textBlockEmailId" Text="Email" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,170,0,0" Name="textBlockNroCuenta" Text="n° de Cuenta Cliente" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,200,0,0" Name="textBlockNroZona" Text="n° de Zona Viajante" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,230,0,0" Name="textBlockPassword" Text="Llave Habilitación:" VerticalAlignment="Top" Width="110" TextAlignment="Right"  />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="47,260,0,0" Name="textBlockConfirmPwd" Text="Confirmar Llave:" VerticalAlignment="Top" Width="110" TextAlignment="Right" />
 
-            <TextBox Height="23" HorizontalAlignment="Left" Margin="183,20,0,0" Name="textBoxFirstName" VerticalAlignment="Top" Width="222" />
-            <TextBox Height="23" HorizontalAlignment="Left" Margin="183,50,0,0" Name="textBoxLastName" VerticalAlignment="Top" Width="222" />
-            <TextBox Height="23" HorizontalAlignment="Left" Margin="183,80,0,0" Name="textBoxEmail" VerticalAlignment="Top" Width="222" />
 
-            <PasswordBox Height="23" HorizontalAlignment="Left" Margin="183,107,0,0" Name="passwordBox1" VerticalAlignment="Top" Width="222" />
-            <!--For password-->
-            <PasswordBox Height="23" HorizontalAlignment="Left" Margin="183,136,0,0" Name="passwordBoxConfirm" VerticalAlignment="Top" Width="222" />
-            <TextBox Height="23" HorizontalAlignment="Left" Margin="183,0,0,66" Name="textBoxAddress" VerticalAlignment="Bottom" Width="222" />
-            <Button Content="Submit" Height="23" HorizontalAlignment="Left" Margin="183,204,0,0" Name="Submit" VerticalAlignment="Top" Width="70" Click="Submit_Click" />
-            <Button Content="Reset" Height="23" HorizontalAlignment="Left" Margin="259,204,0,0" Name="button2" VerticalAlignment="Top" Width="70" Click="button2_Click" />
-            <Button Content="Cancel" Height="23" HorizontalAlignment="Right" Margin="0,204,60,0" Name="button3" VerticalAlignment="Top" Width="70" Click="button3_Click" />
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="173,20,0,0" Name="textBoxFirstName" VerticalAlignment="Top" Width="222" />
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="173,50,0,0" Name="textBoxLastName" VerticalAlignment="Top" Width="222" />
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="173,80,0,0" Name="textBoxRazonSocial" VerticalAlignment="Top" Width="222" />
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="173,110,0,0" Name="textBoxCuit" VerticalAlignment="Top" Width="222" />
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="173,140,0,0" Name="textBoxEmail" VerticalAlignment="Top" Width="222" />
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="173,170,0,0" Name="textBoxNroCuenta" VerticalAlignment="Top" Width="80" />
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="173,200,0,0" Name="textBoxNroZona" VerticalAlignment="Top" Width="80" />
+
+            <PasswordBox Height="23" HorizontalAlignment="Left" Margin="173,230,0,0" Name="passwordBox1" VerticalAlignment="Top" Width="100" />
+            <PasswordBox Height="23" HorizontalAlignment="Left" Margin="173,260,0,0" Name="passwordBoxConfirm" VerticalAlignment="Top" Width="100" />
+
+            <Button Content="Registrar" Height="23" HorizontalAlignment="Left" Margin="100,310,0,0" Name="Submit" VerticalAlignment="Top" Width="70" Click="Submit_Click" />
+            <Button Content="Resetear" Height="23" HorizontalAlignment="Left" Margin="180,310,0,0" Name="button2" VerticalAlignment="Top" Width="70" Click="button2_Click" />
+            <Button Content="Cancelar Registro" Height="23" HorizontalAlignment="Left" Margin="260,310,0,0" Name="button3" VerticalAlignment="Top" Width="120" Click="button3_Click" />
         </Grid>
     </Grid>
 </Window>
