--- a/ANSv4/Catalogo4/_productos/DetalleProducto.xaml
+++ b/ANSv4/Catalogo4/_productos/DetalleProducto.xaml
@@ -12,7 +12,7 @@
             <ColumnDefinition Width="60" />
         </Grid.ColumnDefinitions>
         <Image HorizontalAlignment="Left" Height="60"  VerticalAlignment="Top" Width="60" x:Name="imgIzquierda" Grid.Column="0"/>
-        <WebBrowser Name="txtDetalle" Grid.Column="1" Source="http://paradigmabb.no-ip.biz:8082/autonautica/" />
+        <Label Name="txtDetalle" Grid.Column="1"  />
         <Image HorizontalAlignment="Left" Height="60"  VerticalAlignment="Top" Width="60" x:Name="imgDerecha" Grid.Column="2"/>
     </Grid>
 </UserControl>
