--- a/ANSv4/Catalogo4/MainWindow.xaml
+++ b/ANSv4/Catalogo4/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
         Height="600" Width="1280"
-        WindowStyle="SingleBorderWindow"
+        WindowStyle="ThreeDBorderWindow"
         ResizeMode="CanResize"
         Title="Catálogo Dígital de Productos - Auto Náutica Sur s.r.l. - v4.0" Loaded="Window_Loaded_1">
     <Grid>
@@ -19,93 +19,112 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="100" />
             </Grid.ColumnDefinitions>
-            <Image Name="ans" Source="http://paradigmabb.no-ip.biz:8082/autonautica/img/logoAutonautica.png" Grid.Column="0" Margin="10,-13.433,1059.015,0" Grid.ColumnSpan="2" />
-            <Image Name="banner" Source="http://www.grupoindar.com.ar/clientes/04.gif" Grid.Column="1" Margin="17.985,0,37.313,0" />
+            <Image Name="ans" Source="pack://siteoforigin:,,,/recursos/Nuevo-logo-Auto-nautica-original.png" Grid.Column="0" Margin="10,-13.433,1059.015,0" Grid.ColumnSpan="2" />
+            <Image Name="banner" Source="pack://siteoforigin:,,,/recursos/Nuevo-logo-Auto-nautica-horizontal-original.png" Grid.Column="1" Margin="17.985,0,37.313,0" />
             <Image Name="cotizacion" Source="http://paradigmabb.no-ip.biz:8082/autonautica/img/cotizacion-redes.png" Grid.Column="1" Grid.ColumnSpan="2" Margin="1057.522,-13.433,10,0" />
-
         </Grid>
         <ad:DockingManager x:Name="dockManager" Grid.Row="1">
             <ad:ResizingPanel Orientation="Vertical">
                 <ad:ResizingPanel Orientation="Horizontal">
-
-                    <ad:DockablePane ad:ResizingPanel.ResizeWidth="150" >
+                    <ad:DocumentPane Loaded="DocumentPane_Loaded_1" ShowHeader="True" Visibility="Visible" SelectedIndex="0">
+                        <ad:DocumentContent Title="Productos"  Visibility="Visible">
+                            <Grid Name="grProductos"> 
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="40" />
+                                    <RowDefinition  Height="*"/>
+                                    <RowDefinition Height="100" />
+                                    <RowDefinition  Height="150"/>
+                                </Grid.RowDefinitions>
+                                <Grid x:Name="searchArea" Grid.Row="0" />
+                                <Grid x:Name="productsArea" Grid.Row="1" />
+                                <_productos:DetalleProducto Grid.Row="2" x:Name="productDetalle"/>
+                                <Grid x:Name="VentaDevolucionesArea" Grid.Row="3">
+                                    <ad:ResizingPanel Orientation="Horizontal">                                        
+                                        <ad:DockablePane x:Name="misTabsAcciones" SelectedIndex="0" Visibility="Visible">
+                                            <ad:DockableContent Title="Nota de Venta" x:Name="notaDeVenta">
+                                                <ListView>
+                                                    <ListView.View>
+                                                        <GridView>
+                                                            <GridView.Columns>
+                                                                <GridViewColumn Header="Comprar"/>
+                                                                <GridViewColumn Header="Ver"/>
+                                                                <GridViewColumn Header="Confirmar"/>
+                                                                <GridViewColumn Header="Nuevo"/>
+                                                            </GridView.Columns>
+                                                        </GridView>
+                                                    </ListView.View>
+                                                </ListView>
+                                            </ad:DockableContent>
+                                            <ad:DockableContent Title="Devoluciones" x:Name="devoluciones"></ad:DockableContent>
+                                        </ad:DockablePane>
+                                    </ad:ResizingPanel>
+                                </Grid>
+                            </Grid>
+                        </ad:DocumentContent>
+                        <ad:DocumentContent Title="Recibos" IsCloseable="True" IsFloatingAllowed="True" ScrollViewer.CanContentScroll="True" Visibility="Visible">
+                            <Grid Name="grRecibos">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition  Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid x:Name="xRecibosArea" Grid.Row="0" />
+                            </Grid>
+                        </ad:DocumentContent>
+                        <ad:DocumentContent Title="Rendiciones" IsCloseable="True" IsFloatingAllowed="True" ScrollViewer.CanContentScroll="True" Visibility="Visible">
+                            <Grid Name="grRendiciones">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition  Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid x:Name="xRendiciones" Grid.Row="0" />
+                            </Grid>
+                        </ad:DocumentContent>
+                        <ad:DocumentContent Title="Inter-Depósitos" IsCloseable="True" IsFloatingAllowed="True" ScrollViewer.CanContentScroll="True" Visibility="Visible">
+                            <Grid Name="grInterDepositos">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition  Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid x:Name="xInterDepositosArea" Grid.Row="0" />
+                            </Grid>
+                        </ad:DocumentContent>
+                        <ad:DocumentContent Title="Enviados" IsCloseable="True" IsFloatingAllowed="True" ScrollViewer.CanContentScroll="True" Visibility="Visible">
+                            <Grid Name="grEnviados">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition  Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid x:Name="xEnviadosArea" Grid.Row="0" />
+                            </Grid>
+                        </ad:DocumentContent> 
+                        <ad:DocumentContent Title="Novedades en Línea" IsCloseable="True" IsFloatingAllowed="True" ScrollViewer.CanContentScroll="True" Visibility="Visible">
+                            <Grid Name="grNovedades">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition  Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid x:Name="xNovedadesArea" Grid.Row="0" >
+                                    <WebBrowser Name="detailsBrowser" Source="http://www.autonauticasur-r.com.ar/portals/0/w3/acc.html" />
+                                </Grid>
+                            </Grid>
+                        </ad:DocumentContent>                        
+                    </ad:DocumentPane>
+                    <ad:DockablePane ad:ResizingPanel.ResizeWidth="150" Visibility="Visible">
+                        <ad:DockableContent x:Name="toolsContent" Title="Menú" Visibility="Hidden" DockableStyle="AutoHide" >
+                            <ListBox>
+                                <ListBoxItem Content="Recibos"/>
+                                <ListBoxItem Content="Rendiciones"/>
+                                <ListBoxItem Content="Porcentajes Líneas"/>
+                                <ListBoxItem Content="ANS en internet"/>
+                                <ListBoxItem Content="Revista Digital"/>
+                                <ListBoxItem Content="Configuración Aplic."/>
+                            </ListBox>
+                        </ad:DockableContent>
                         <ad:DockableContent x:Name="sugerencias" Title="Sugerencias" Visibility="Hidden" DockableStyle="AutoHide" >
                             <TreeView>
                                 <TreeViewItem Header="Sugerencia 1"/>
                                 <TreeViewItem Header="Sugerencia 2"/>
                             </TreeView>
                         </ad:DockableContent>
-                        <ad:DockableContent x:Name="toolsContent" Title="Menú" Visibility="Collapsed" DockableStyle="AutoHide" >
-                            <ListBox>
-                                <ListBoxItem Content="ANS en internet"/>
-                                <ListBoxItem Content="Revista Digital"/>
-                                <ListBoxItem Content="Porcentajes Líneas"/>
-                                <ListBoxItem Content="Rendiciones"/>
-                                <ListBoxItem Content="Configuración Aplic."/>
-                            </ListBox>
-                        </ad:DockableContent>
-                    </ad:DockablePane>
-
-                    <ad:DocumentPane Loaded="DocumentPane_Loaded_1" ShowHeader="True">
-                        <ad:DocumentContent Title="Productos" IsCloseable="True" IsFloatingAllowed="True" ScrollViewer.CanContentScroll="True" Visibility="Collapsed">
-                            <Grid Name="grid2">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="40" />
-                                    <RowDefinition  Height="*"/>
-                                    <RowDefinition Height="80" />
-                                </Grid.RowDefinitions>
-                                <Grid x:Name="searchArea" Grid.Row="0" />
-                                <Grid x:Name="productsArea" Grid.Row="1" />
-                                <_productos:DetalleProducto Grid.Row="2" x:Name="productDetalle"/>
-                            </Grid>
-                        </ad:DocumentContent>
-                    </ad:DocumentPane>
-
-                    <ad:DockablePane ad:ResizingPanel.ResizeWidth="150">
-                        <ad:DockableContent x:Name="ProductodetailsContent" Title="Detalle del Producto" Visibility="Collapsed" DockableStyle="AutoHide">
-                            <ListBox>
-                                <ListBoxItem Content="Descripción y Precio del Producto"/>
-                                <ListBoxItem Content="Equivalencia, Reemplaza, Motor"/>
-                                <ListBoxItem Content="Año Modelo"/>
-                                <ListBoxItem Content="Imágen del Producto y línea proveedora"/>
-                            </ListBox>
-                        </ad:DockableContent>
-                        <ad:DockableContent x:Name="detailsContent" Title="Novedades" Visibility="Collapsed" DockableStyle="AutoHide" >
-                            <WebBrowser Name="detailsBrowser" Source="http://www.autonauticasur-r.com.ar" />
-                        </ad:DockableContent>
                     </ad:DockablePane>
                 </ad:ResizingPanel>
-
-
-                <ad:DockablePane x:Name="misTabsAcciones" ad:ResizingPanel.ResizeHeight="100" SelectedIndex="0" Visibility="Visible">
-                    <ad:DockableContent Title="Visitar" x:Name="visitar"></ad:DockableContent>
-                    <ad:DockableContent Title="Nota de Venta" x:Name="notaDeVenta">
-                        <ListView>
-                            <ListView.View>
-                                <GridView>
-                                    <GridView.Columns>
-                                        <GridViewColumn Header="Comprar"/>
-                                        <GridViewColumn Header="Ver"/>
-                                        <GridViewColumn Header="Confirmar"/>
-                                        <GridViewColumn Header="Nuevo"/>
-                                    </GridView.Columns>
-                                </GridView>
-                            </ListView.View>
-                        </ListView>
-                    </ad:DockableContent>
-                    <ad:DockableContent Title="Devoluciones" x:Name="devoluciones"></ad:DockableContent>
-                    <ad:DockableContent Title="Cliente" x:Name="cliente"></ad:DockableContent>
-                    <ad:DockableContent Title="Cta. Cte." x:Name="ctaCte"></ad:DockableContent>
-                    <ad:DockableContent Title="Recibo" x:Name="recibo">
-                        <Button x:Name="btnReciboPage" Click="btnReciboPage_Click" Width="200" Height="20"/>
-                    </ad:DockableContent>
-                    <ad:DockableContent Title="InterDepósitos" x:Name="interDepositos"></ad:DockableContent>
-                    <ad:DockableContent Title="Bandeja de Enviados" x:Name="bandejaDeEnviados"></ad:DockableContent>
-
-                </ad:DockablePane>
             </ad:ResizingPanel>
         </ad:DockingManager>
-
 
         <StatusBar Grid.Row="2">
             <StatusBarItem Content="2014 © Todos los derechos reservados por Auto Náutica Sur s.r.l."/>
