--- a/ANSv4/Catalogo4/MainWindow.xaml
+++ b/ANSv4/Catalogo4/MainWindow.xaml
@@ -126,9 +126,9 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition  Height="*"/>
                                 </Grid.RowDefinitions>
-                                <Grid x:Name="xNovedadesArea" Grid.Row="0" >
+                                <!--<Grid x:Name="xNovedadesArea" Grid.Row="0" >
                                     <WebBrowser Name="detailsBrowser" Source="http://www.autonauticasur-r.com.ar/portals/0/w3/acc.html" />
-                                </Grid>
+                                </Grid>-->
                             </Grid>
                         </ad:DocumentContent>
 
