Se crea un splitter para poder redimensionar la grilla de productos y el detalle del producto.

--- a/ANSv4/Catalogo4/MainWindow.xaml
+++ b/ANSv4/Catalogo4/MainWindow.xaml
@@ -33,12 +33,15 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="30" />
                                     <RowDefinition Height="*"/>
+                                    <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="120" />                                   
                                 </Grid.RowDefinitions>
 
                                 <Grid x:Name="searchArea"   Grid.Row="0"  />
                                 <Grid x:Name="productsArea" Grid.Row="1" />
-                                <_productos:DetalleProducto Grid.Row="2" x:Name="productDetalle" />
+                                <GridSplitter Grid.Row="2" ResizeDirection="Rows" Height="3" ResizeBehavior="BasedOnAlignment"
+                                              HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                                <_productos:DetalleProducto Grid.Row="3" x:Name="productDetalle" />
                             </Grid>
                         </ad:DocumentContent>
                         
