--- a/ANSv4/Catalogo4/MainWindow.xaml
+++ b/ANSv4/Catalogo4/MainWindow.xaml
@@ -7,23 +7,27 @@
         Title="Catálogo Dígital de Productos - Auto Náutica Sur s.r.l. - v4.0" Loaded="Window_Loaded_1" WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="70"/>
+            <RowDefinition Height="90"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
 
-        <Grid Name="header" Visibility="Visible" Grid.Row="0">
+        <Grid Name="header" Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <Image Name="topLogo" Source="pack://siteoforigin:,,,/recursos/Nuevo-logo-Auto-nautica-original.png" Grid.Column="0" Margin="10,-13.433,1059.015,0" Grid.ColumnSpan="2" />
-            <Image Name="topBanner" Source="pack://siteoforigin:,,,/recursos/Nuevo-logo-Auto-nautica-horizontal-original.png" Grid.Column="1" Margin="17.985,0,37.313,0" />
-            <Image Name="topRedesSociales" Source="http://paradigmabb.no-ip.biz:8082/autonautica/img/cotizacion-redes.png" Grid.Column="1" Grid.ColumnSpan="2" Margin="1057.522,-13.433,10,0" />
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid>
+                <Image Name="topLogo" Source="pack://siteoforigin:,,,/recursos/Nuevo-logo-Auto-nautica-original.png" Grid.Column="0" Margin="10,-13.433,1059.015,0" Grid.ColumnSpan="2" />
+                <WebBrowser Name="topBanner" Source="D:\Desarrollos\GitHub\snaPorting\ANSv4\Catalogo4\recursos\tBanner1.html" Grid.Column="1" Width="640" Height="90" Margin="0" VerticalAlignment="Top" Opacity="0.2" HorizontalAlignment="Center" IsEnabled="False"/>
+                <Image Name="topRedesSociales" Source="http://paradigmabb.no-ip.biz:8082/autonautica/img/cotizacion-redes.png" Grid.Column="1" Grid.ColumnSpan="2" Margin="1057.522,-13.433,10,0" />
+            </Grid>
         </Grid>
 
-        <ad:DockingManager x:Name="dockManager" Grid.Row="1" IsAnimationEnabled="True" >
+
+    <ad:DockingManager x:Name="dockManager" Grid.Row="1" IsAnimationEnabled="True" >
             <ad:ResizingPanel Orientation="Vertical">
                 <ad:ResizingPanel Orientation="Horizontal">
                     <ad:DocumentPane Loaded="DocumentPane_Loaded_1" ShowHeader="True" SelectedIndex="0" SelectionChanged="DocumentPane_SelectionChanged_1">
