--- a/ANSv4/Catalogo4/MainWindow.xaml
+++ b/ANSv4/Catalogo4/MainWindow.xaml
@@ -7,13 +7,13 @@
         Loaded="Window_Loaded_1" 
         WindowStartupLocation="CenterScreen" 
         WindowState="Normal"         
-        x:Name="Window"
-        ResizeMode="CanResizeWithGrip" Icon="recursos/LOGO-ANS-32X32.ico" AllowsTransparency="True" WindowStyle="None">
+        x:Name="CatalogoMainWindow"
+        BorderThickness="0"
+        ResizeMode="CanResizeWithGrip" Icon="recursos/LOGO-ANS-32X32.ico" AllowsTransparency="False" WindowStyle="None">
 
     <Border Grid.Row="0" x:Name="LayoutRoot" 
-          Background="White"  BorderBrush="Red" BorderThickness="2"
-          MouseLeftButtonDown="Title_MouseLeftButtonDown" CornerRadius="2">
-
+          Background="White"  BorderBrush="#E31C19" BorderThickness="2"
+          MouseLeftButtonDown="Title_MouseLeftButtonDown" CornerRadius="0">
 
         <Grid>
             <Grid.RowDefinitions>
@@ -119,8 +119,7 @@
 
                                     <Grid x:Name="searchArea"   Grid.Row="0"  />
                                     <Grid x:Name="productsArea" Grid.Row="1" />
-                                    <GridSplitter Grid.Row="2" ResizeDirection="Rows" Height="3" ResizeBehavior="BasedOnAlignment"
-                                              HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                                    <GridSplitter Grid.Row="2" ResizeDirection="Rows" Height="3" ResizeBehavior="BasedOnAlignment" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
                                     <_productos:DetalleProducto Grid.Row="3" x:Name="productDetalle" />
                                 </Grid>
                             </ad:DocumentContent>
@@ -152,23 +151,14 @@
                                 </Grid>
                             </ad:DocumentContent>
 
-                            <ad:DocumentContent Title="Bandeja de Enviados" IsCloseable="False" IsFloatingAllowed="False">
-                                <Grid Name="grEnviados">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition  Height="*"/>
-                                    </Grid.RowDefinitions>
-                                    <Grid x:Name="xEnviadosArea" Grid.Row="0" />
-                                </Grid>
-                            </ad:DocumentContent>
-
                             <ad:DocumentContent Title="Novedades en Línea" IsCloseable="False" IsFloatingAllowed="False">
                                 <Grid Name="grNovedades">
                                     <Grid.RowDefinitions>
                                         <RowDefinition  Height="*"/>
                                     </Grid.RowDefinitions>
                                     <!--<Grid x:Name="xNovedadesArea" Grid.Row="0" >
-                                    <WebBrowser Name="detailsBrowser" Source="http://www.autonauticasur-r.com.ar/portals/0/w3/acc.html" />
-                                </Grid>-->
+                                        <WebBrowser Name="detailsBrowser" Source="http://www.autonauticasur-r.com.ar/portals/0/w3/acc.html" />
+                                    </Grid>-->
                                 </Grid>
                             </ad:DocumentContent>
 
@@ -195,8 +185,8 @@
                         </ad:DockablePane>
 
                     </ad:ResizingPanel>
-                    <ad:DockablePane ad:ResizingPanel.ResizeHeight="250" SelectedIndex="0" Visibility="Visible" >
-                        <ad:DockableContent Title="Nota de Venta" x:Name="xxxxNotaVentaArea">
+                    <ad:DockablePane x:Name="xVtaDevDockP" ad:ResizingPanel.ResizeHeight="250" SelectedIndex="0" Visibility="Visible" Background="#CFD1D2" >
+                        <ad:DockableContent Title="Nota de Venta" x:Name="xNotaVentaAreaDockC">
                             <Grid Name="grNotaVenta">
                                 <Grid.RowDefinitions>
                                     <RowDefinition  Height="*"/>
@@ -204,14 +194,14 @@
                                 <Grid x:Name="xNotaVentaArea" Grid.Row="0" />
                             </Grid>
                         </ad:DockableContent>
-                        <ad:DockableContent Title="Devoluciones" x:Name="devoluciones"></ad:DockableContent>
+                        <ad:DockableContent Title="Devoluciones" x:Name="xDevolucionesAreaDockC"></ad:DockableContent>
                     </ad:DockablePane>
                 </ad:ResizingPanel>
             </ad:DockingManager>
 
             <StatusBar Grid.Row="3">
-                <StatusBarItem Name="StatusBar2" Content="Catálogo Dígital de Productos - v4.0" HorizontalAlignment="Left" />
-                <StatusBarItem Name="StatusBar1" Content="2014 © Todos los derechos reservados por Auto Náutica Sur s.r.l." HorizontalAlignment="Right" />               
+                <StatusBarItem Name="StatusBar2" Content="Catálogo Dígital de Productos - v4.0" HorizontalAlignment="Left" Margin="5,0,0,0" />
+                <StatusBarItem Name="StatusBar1" Content="2014 © Todos los derechos reservados por Auto Náutica Sur S.R.L." HorizontalAlignment="Right" Margin="5,0" />               
             </StatusBar>
         </Grid>
 
